src/objects/Remote_Invocation__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Transaction_ID__c</fullName>
        <description>Required. External ID, Unique (Case Sensitive)</description>
        <label>Integration Transaction ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_ID__c</fullName>
        <description>An identifier used by the business for this invocation e.g. if it relates to an agency process then this could be the IATA Code.</description>
        <label>Internal ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Required. It identifies the type of request</description>
        <label>Request Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANG_IEP_MODEL_A</fullName>
                    <label>NewGen - Easy Pay Model A</label>
                </value>
                <value>
                    <fullName>GDI_ENDORSEMENT</fullName>
                </value>
                <value>
                    <fullName>TIP_IFG_REPORT</fullName>
                    <label>TIP - IFG Report</label>
                </value>
                <value>
                    <fullName>SAP_PPA</fullName>
                    <label>SAP PPA</label>
                </value>
                <value>
                    <fullName>TIP_AUTO_REPORTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Identifies the source system</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IEP</fullName>
                </value>
                <value>
                    <fullName>IFG</fullName>
                </value>
                <value>
                    <fullName>GDI</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <description>Is the description of the execution, full detail</description>
        <label>Status Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Default: Initializing.
When MS sets “In Progress”, trigger to fire</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initializing</fullName>
                    <default>true</default>
                    <label>Initializing</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Remote Invocation</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Remove Invocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Invocations</pluralLabel>
    <recordTypes>
        <fullName>ANG_IEP_MODEL_A</fullName>
        <active>true</active>
        <label>NewGen - Easy Pay Model A</label>
    </recordTypes>
    <recordTypes>
        <fullName>GDI_ENDORSEMENT</fullName>
        <active>true</active>
        <label>GDI ENDORSEMENT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TIP_AUTO_REPORTS</fullName>
        <active>true</active>
        <description>TIP Auto Reports</description>
        <label>TIP_AUTO_REPORTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP_PPA</fullName>
        <active>true</active>
        <label>SAP PPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>TIP_IFG_REPORT</fullName>
        <active>true</active>
        <label>TIP - IFG Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>